# textent

./: .gitignore  0-download-books.py  1-batch.py  1-rtk-cpu.py  2-create-ladas2tei-metadata.py  2-rtk-cpu-batch.sh  2-rtk-cpu.py  3-create-ladas2tei-metadata.py  4-ladas2tei.py  README.md  metadata_sample.tsv  pyproject.toml
rtk/: task.py
tei_conversion/: config.yml  multiprocess.py  tei2txt.xsl
tei_conversion/src/: body_build.py  build.py  order_files.py  sourcedoc_build.py  write_output.py
to_sort/: kraken-command.sh  kraken_slurm.sh  l2t_metadata.tsv  l2t_metadata_bis.tsv  metadata.tsv  metadata_sample.tsv  ocr_slurm.sh  template_output.txt  yaltai-command.sh  yaltai_slurm.sh
